--- a/public/css/common_style.css
+++ b/public/css/common_style.css
@@ -1,5 +1,5 @@
 body {
-    background: rgb(226, 226, 226);
+    background: rgb(238, 238, 238);
 }
 .menu {
     width: 100%;
@@ -15,10 +15,11 @@ body {
 .menu ul {
     text-align: center;
 }
-#close {
+#close,
+#open {
     width: 40px;
     height: 40px;
-    background: blue;
+    background: rgb(67, 67, 255);
     color: white;
     cursor: pointer;
     font-size: 30px;
@@ -32,4 +33,8 @@ header {
     left: 0;
     width: 100vw;
     height: 70px;
+    background: rgb(238, 238, 238);
+}
+.logo_wrap {
+    display: flex;
 }
