--- a/public/css/detail_style.css
+++ b/public/css/detail_style.css
@@ -13,3 +13,8 @@ main,
     width: 90%;
     background: cornflowerblue;
 }
+.image {
+    width: 100%;
+    height: 350px;
+    background: rgb(255, 232, 232);
+}
