--- a/public/css/index_style.css
+++ b/public/css/index_style.css
@@ -1,6 +1,13 @@
-header {
+a {
+    text-decoration: none;
+    color: white;
+}
+.header_content {
     display: flex;
     justify-content: space-between;
+    width: 80%;
+    min-width: 1300px;
+    margin: auto;
 }
 main {
     display: flex;
@@ -10,10 +17,46 @@ main {
     min-width: 1300px;
     margin: 70px auto 0;
 }
+.search_wrap {
+    width: 650px;
+    height: 50px;
+    background: white;
+    border-radius: 5px;
+}
+input,
+select {
+    height: 40px;
+    border: none;
+}
+input {
+    width: 400px;
+}
+select {
+    cursor: pointer;
+    width: 100px;
+}
 .card_wrap {
     width: 300px;
     height: 300px;
     background: rgb(255, 255, 255);
     margin: 10px 0;
-    border-radius: 10px;
+    border-radius: 5px;
+}
+.card_image {
+    width: 100%;
+    height: 160px;
+    background: rgb(186, 255, 232);
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+.card_flex {
+    display: flex;
+    justify-content: space-between;
+}
+.card_detail {
+    background: blue;
+    color: white;
+    border-radius: 5px;
+    padding: 8px 14px;
+    font-size: 12px;
 }
