--- a/public/css/common_style.css
+++ b/public/css/common_style.css
@@ -13,6 +13,10 @@ body {
     z-index: 1000;
     text-align: center;
 }
+a {
+    text-decoration: none;
+    color: blue;
+}
 #close,
 #open {
     width: 40px;
