--- a/public/css/common_style.css
+++ b/public/css/common_style.css
@@ -13,9 +13,16 @@ body {
     z-index: 1000;
     text-align: center;
 }
+.menu ul li {
+    margin-bottom: 40px;
+    font-size: 28px;
+}
 a {
     text-decoration: none;
     color: blue;
+}
+#close {
+    margin: 40px 0 100px 80px;
 }
 #close,
 #open {
