--- a/public/css/mypage_style.css
+++ b/public/css/mypage_style.css
@@ -9,8 +9,54 @@ main {
     display: flex;
     justify-content: space-around;
     width: 80%;
+    margin: auto;
 }
 .reservation_info,
 .favorite_info {
-    width: 45%;
+    width: 600px;
+}
+.reservation_card {
+    width: 400px;
+    height: 250px;
+    background: blue;
+    border-radius: 5px;
+    color: white;
+    margin: auto;
+}
+.reservation_flex {
+    display: flex;
+}
+/* 店舗情報カード(indexとまとめる？) */
+.favorite_flex {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.card_wrap {
+    width: 280px;
+    height: 280px;
+    background: rgb(255, 255, 255);
+    margin: 10px 0;
+    border-radius: 5px;
+}
+.card_image {
+    width: 100%;
+    height: 160px;
+    background: rgb(186, 255, 232);
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+.card_flex {
+    display: flex;
+    justify-content: space-between;
+}
+.card_detail {
+    background: blue;
+    color: white;
+    border-radius: 5px;
+    padding: 8px 14px;
+    font-size: 12px;
+}
+.card_detail a {
+    color: white;
 }
