--- a/public/css/detail_style.css
+++ b/public/css/detail_style.css
@@ -10,11 +10,53 @@ header {
 }
 main,
 .reservation_wrap {
-    width: 90%;
+    position: relative;
+    width: 85%;
     background: cornflowerblue;
+    line-height: 1.4em;
+}
+.reservation_wrap {
+    margin-top: 40px;
+    color: white;
 }
 .image {
     width: 100%;
     height: 350px;
     background: rgb(255, 232, 232);
+}
+.tag a {
+    color: black;
+}
+table {
+    background: rgb(121, 164, 245);
+}
+#date,
+#time,
+#number {
+    height: 25px;
+    padding-left: 5px;
+    margin: 7px;
+    border: none;
+    border-radius: 5px;
+}
+#date {
+    width: 30%;
+}
+#time,
+#number {
+    width: 90%;
+}
+.submit {
+    position: absolute;
+    bottom: 0;
+    height: 50px;
+    width: 100%;
+    background: blue;
+}
+.submit button {
+    width: 100%;
+    height: 100%;
+    border: none;
+    background-color: transparent;
+    color: white;
 }
