--- a/public/css/index_style.css
+++ b/public/css/index_style.css
@@ -12,10 +12,11 @@
 main {
     display: flex;
     flex-wrap: wrap;
+    /* justify-content: left; */
     justify-content: space-between;
     width: 80%;
     min-width: 1300px;
-    margin: 70px auto 0;
+    margin: 100px auto 0;
 }
 .search_wrap {
     width: 650px;
@@ -39,7 +40,7 @@ select {
     width: 300px;
     height: 300px;
     background: rgb(255, 255, 255);
-    margin: 10px 0;
+    margin: 10px 10px;
     border-radius: 5px;
 }
 .card_image {
@@ -59,4 +60,7 @@ select {
     border-radius: 5px;
     padding: 8px 14px;
     font-size: 12px;
+}
+.card_tag a {
+    color: black;
 }
