予約フォームバリデーション追加、検索機能修正

--- a/public/css/common_style.css
+++ b/public/css/common_style.css
@@ -53,3 +53,8 @@ header {
     font-size: 28px;
     margin-left: 10px;
 }
+.error {
+    color: red;
+    font-size: 12px;
+    line-height: 1em;
+}
