--- a/public/css/detail_style.css
+++ b/public/css/detail_style.css
@@ -12,23 +12,40 @@ main,
 .reservation_wrap {
     position: relative;
     width: 85%;
-    background: cornflowerblue;
     line-height: 1.4em;
 }
 .reservation_wrap {
     margin-top: 40px;
     color: white;
+    border-radius: 10px;
+    background: cornflowerblue;
+}
+.reservation_wrap h1 {
+    margin: 20px 0;
+    font-size: 20px;
 }
 .image {
     width: 100%;
     height: 350px;
     background: rgb(255, 232, 232);
 }
+.tag {
+    margin: 20px 0;
+}
 .tag a {
     color: black;
+    font-size: 14px;
 }
-table {
+main p {
+    font-size: 14px;
+}
+.reservation_confirm {
     background: rgb(121, 164, 245);
+    padding: 20px 15px;
+    width: 80%;
+    margin: auto;
+    text-align: left;
+    font-size: 14px;
 }
 #date,
 #time,
@@ -52,6 +69,9 @@ table {
     height: 50px;
     width: 100%;
     background: blue;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    text-align: center;
 }
 .submit button {
     width: 100%;
@@ -59,4 +79,22 @@ table {
     border: none;
     background-color: transparent;
     color: white;
+}
+.back {
+    background: white;
+    width: 28px;
+    height: 28px;
+    border-radius: 3px;
+    text-align: center;
+    line-height: 28px;
+    color: black;
+    font-size: 12px;
+    font-weight: bold;
+    margin-right: 10px;
+}
+.shop_name {
+    font-size: 26px;
+}
+.info_title {
+    margin: 40px 0 20px;
 }
