--- a/public/css/thanks_style.css
+++ b/public/css/thanks_style.css
@@ -22,7 +22,7 @@ p {
     margin-bottom: 50px;
 }
 .thanks_button {
-    background: blue;
+    background: rgb(53, 96, 246);
     border-radius: 3px;
     color: white;
     font-size: 12px;
