--- a/public/css/common_style.css
+++ b/public/css/common_style.css
@@ -5,7 +5,7 @@ body {
     width: 100%;
     height: 100vh;
     background: white;
-    color: blue;
+    color: rgb(53, 96, 246);
     transition: 0.4s;
     position: fixed;
     top: 0;
@@ -19,7 +19,7 @@ body {
 }
 a {
     text-decoration: none;
-    color: blue;
+    color: rgb(53, 96, 246);
 }
 #close {
     margin: 40px 0 100px 120px;
@@ -28,7 +28,7 @@ a {
 #open {
     width: 40px;
     height: 40px;
-    background: rgb(67, 67, 255);
+    background: rgb(53, 96, 246);
     color: white;
     cursor: pointer;
     font-size: 30px;
@@ -52,7 +52,7 @@ header {
     /* margin: 40px 0; */
 }
 .logo_wrap h1 {
-    color: blue;
+    color: rgb(53, 96, 246);
     font-size: 28px;
     margin-left: 10px;
     line-height: 40px;
