--- a/public/css/detail_style.css
+++ b/public/css/detail_style.css
@@ -18,11 +18,11 @@ main,
     margin-top: 40px;
     color: white;
     border-radius: 10px;
-    background: cornflowerblue;
+    background: rgb(53, 96, 246);
 }
 .reservation_wrap h1 {
     margin: 20px 0;
-    font-size: 20px;
+    font-size: 22px;
 }
 .image {
     width: 100%;
@@ -40,12 +40,20 @@ main p {
     font-size: 14px;
 }
 .reservation_confirm {
-    background: rgb(121, 164, 245);
-    padding: 20px 15px;
+    background: rgb(85, 128, 247);
+    padding: 20px;
     width: 80%;
-    margin: auto;
+    margin: 20px;
     text-align: left;
     font-size: 14px;
+    border-radius: 5px;
+}
+.table_reservation {
+    line-height: 2em;
+}
+.table_reservation th {
+    font-weight: normal;
+    width: 100px;
 }
 #date,
 #time,
@@ -68,10 +76,11 @@ main p {
     bottom: 0;
     height: 50px;
     width: 100%;
-    background: blue;
+    background: rgb(0, 63, 245);
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     text-align: center;
+    line-height: 50px;
 }
 .submit button {
     width: 100%;
@@ -79,6 +88,13 @@ main p {
     border: none;
     background-color: transparent;
     color: white;
+    cursor: pointer;
+}
+.submit button:hover {
+    color: rgb(0, 63, 245);
+    background: rgb(144, 174, 255);
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 .back {
     background: white;
@@ -94,6 +110,7 @@ main p {
 }
 .shop_name {
     font-size: 26px;
+    line-height: 1em;
 }
 .info_title {
     margin: 40px 0 20px;
