--- a/public/css/index_style.css
+++ b/public/css/index_style.css
@@ -12,8 +12,7 @@
 main {
     display: flex;
     flex-wrap: wrap;
-    /* justify-content: left; */
-    justify-content: space-between;
+    justify-content: left;
     width: 80%;
     min-width: 1300px;
     margin: 100px auto 0;
@@ -26,6 +25,7 @@ main {
     height: 50px;
     background: white;
     border-radius: 5px;
+    line-height: 50px;
 }
 input,
 select {
@@ -44,7 +44,7 @@ select {
     width: 300px;
     height: 300px;
     background: rgb(255, 255, 255);
-    margin: 10px 10px;
+    margin: 12px;
     border-radius: 5px;
 }
 .card_image {
@@ -54,17 +54,33 @@ select {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
 }
+.card_name {
+    font-size: 20px;
+    margin-top: 5px;
+}
 .card_flex {
     display: flex;
     justify-content: space-between;
 }
 .card_detail {
-    background: blue;
+    background: rgb(53, 96, 246);
     color: white;
     border-radius: 5px;
-    padding: 8px 14px;
     font-size: 12px;
+    height: 30px;
+    width: 90px;
+    text-align: center;
+    line-height: 30px;
+}
+.card_detail a {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+.card_tag {
+    margin: 10px 0 15px;
 }
 .card_tag a {
     color: black;
+    font-size: 14px;
 }
