--- a/public/css/mypage_style.css
+++ b/public/css/mypage_style.css
@@ -1,9 +1,14 @@
 main {
     margin-top: 100px;
 }
+h2 {
+    font-size: 20px;
+    margin-bottom: 20px;
+}
 .user_name {
     text-align: center;
     font-size: 28px;
+    margin-bottom: 40px;
 }
 .mypage_content {
     display: flex;
@@ -16,15 +21,27 @@ main {
     width: 600px;
 }
 .reservation_card {
-    width: 400px;
-    height: 250px;
-    background: blue;
+    width: 340px;
+    height: 190px;
+    background: rgb(53, 96, 246);
     border-radius: 5px;
     color: white;
-    margin: auto;
+    padding: 30px;
+    font-size: 16px;
+    line-height: 28px;
 }
 .reservation_flex {
     display: flex;
+    justify-content: space-between;
+}
+.reservation_table {
+    margin-top: 20px;
+    text-align: left;
+}
+.reservation_table th {
+    font-weight: normal;
+    line-height: 2em;
+    width: 100px;
 }
 /* 店舗情報カード(indexとまとめる？) */
 .favorite_flex {
@@ -36,7 +53,7 @@ main {
     width: 280px;
     height: 280px;
     background: rgb(255, 255, 255);
-    margin: 5px;
+    margin: 5px 10px;
     border-radius: 5px;
 }
 .card_image {
@@ -46,20 +63,33 @@ main {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
 }
+.card_name {
+    font-size: 18px;
+}
 .card_flex {
     display: flex;
     justify-content: space-between;
 }
 .card_detail {
-    background: blue;
+    background: rgb(53, 96, 246);
     color: white;
     border-radius: 5px;
-    padding: 8px 14px;
     font-size: 12px;
+    height: 30px;
+    width: 90px;
+    text-align: center;
+    line-height: 30px;
 }
 .card_detail a {
     color: white;
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+.card_tag {
+    margin: 5px 0 10px;
 }
 .card_tag a {
     color: black;
+    font-size: 14px;
 }
