--- a/public/css/auth_style.css
+++ b/public/css/auth_style.css
@@ -5,7 +5,8 @@ main {
     transform: translate(-50%, -50%);
     background: white;
     width: 350px;
-    height: 250px;
+    /* height: 250px; */
+    height: fit-content;
     border-radius: 5px;
     text-align: center;
 }
@@ -32,10 +33,11 @@ input {
     margin-bottom: 5px;
     padding-left: 5px;
 }
+.auth_button {
+    display: flex;
+    flex-direction: row-reverse;
+}
 button {
-    position: absolute;
-    bottom: -25px;
-    right: 33px;
     border: none;
     font-size: 12px;
     color: white;
@@ -43,4 +45,9 @@ button {
     border-radius: 4px;
     padding: 4px 14px;
     cursor: pointer;
+    margin: 15px 25px 0 0;
+}
+.error {
+    text-align: left;
+    margin-left: 55px;
 }
