--- a/public/css/detail_style.css
+++ b/public/css/detail_style.css
@@ -26,11 +26,13 @@ main,
 }
 .image {
     width: 100%;
-    height: 350px;
     background: rgb(255, 232, 232);
 }
+.image img {
+    width: 100%;
+}
 .tag {
-    margin: 20px 0;
+    margin: 10px 0;
 }
 .tag a {
     color: black;
