--- a/public/css/index_style.css
+++ b/public/css/index_style.css
@@ -53,6 +53,8 @@ select {
     background: rgb(186, 255, 232);
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
+    background-position: center;
+    background-size: cover;
 }
 .card_name {
     font-size: 20px;
