--- a/public/css/mypage_style.css
+++ b/public/css/mypage_style.css
@@ -65,6 +65,8 @@ h2 {
     background: rgb(186, 255, 232);
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
+    background-position: center;
+    background-size: cover;
 }
 .card_name {
     font-size: 18px;
