--- a/public/css/mypage_style.css
+++ b/public/css/mypage_style.css
@@ -29,6 +29,7 @@ h2 {
     padding: 30px;
     font-size: 16px;
     line-height: 28px;
+    margin-bottom: 15px;
 }
 .reservation_flex {
     display: flex;
