--- a/public/css/common_style.css
+++ b/public/css/common_style.css
@@ -53,7 +53,6 @@ header {
     display: flex;
     top: 40px;
     left: 120px;
-    /* margin: 40px 0; */
 }
 .logo_wrap h1 {
     color: rgb(53, 96, 246);
@@ -78,4 +77,11 @@ header {
     border: 1px solid black;
     padding: 5px;
     white-space: nowrap;
+}
+
+/* レスポンシブ対応(break point:768px) */
+@media screen and (max-width: 768px) {
+    .logo_wrap {
+        left: 60px;
+    }
 }
