--- a/public/css/index_style.css
+++ b/public/css/index_style.css
@@ -6,20 +6,20 @@
     display: flex;
     justify-content: space-between;
     width: 80%;
-    min-width: 1300px;
+    min-width: 900px;
     margin: auto;
 }
 main {
     display: flex;
     flex-wrap: wrap;
-    justify-content: left;
-    width: 80%;
-    min-width: 1300px;
+    justify-content: center;
+    width: 90%;
+    min-width: 980px;
     margin: 100px auto 0;
 }
 .search_wrap {
     position: absolute;
-    right: 140px;
+    right: 50px;
     top: 30px;
     width: 650px;
     height: 50px;
@@ -56,6 +56,9 @@ select {
     background-position: center;
     background-size: cover;
 }
+.card_content-wrap {
+    padding: 20px;
+}
 .card_name {
     font-size: 20px;
     margin-top: 5px;
@@ -90,18 +93,50 @@ select {
 /* レスポンシブ対応(break point:768px) */
 @media screen and (max-width: 768px) {
     .header_content {
-        display: block;
+        width: 90%;
+        min-width: 360px;
     }
     .search_wrap {
-        top: 30px;
-        left: 250px;
+        top: 90px;
+        left: 10px;
     }
     main {
         width: 90%;
-        min-width: 400px;
+        min-width: 320px;
+        justify-content: center;
     }
     .card_wrap {
-        width: 200px;
-        height: 200px;
+        width: 150px;
+        height: 150px;
+    }
+    .card_image {
+        height: 80px;
+    }
+    .card_content-wrap {
+        padding: 5px 10px;
+    }
+    .card_name {
+        font-size: 14px;
+        margin-top: 0px;
+    }
+    .card_tag {
+        margin: 0px 0 5px;
+    }
+    .card_tag a {
+        font-size: 11px;
+        display: block;
+        margin: 3px;
+    }
+    .card_detail {
+        width: 80px;
+        height: 25px;
+        line-height: 25px;
+    }
+    .heart {
+        width: 20px;
+    }
+    .sp_flex {
+        display: flex;
+        justify-content: space-between;
     }
 }
