--- a/public/css/mypage_style.css
+++ b/public/css/mypage_style.css
@@ -52,6 +52,11 @@ h2 {
     line-height: 2em;
     width: 100px;
 }
+.reminder_button {
+    width: 28px;
+    height: 28px;
+    margin: auto 0 0;
+}
 /* 店舗情報カード(indexとまとめる？) */
 .favorite_flex {
     display: flex;
