--- a/public/css/mypage_style.css
+++ b/public/css/mypage_style.css
@@ -56,6 +56,7 @@ h2 {
     width: 28px;
     height: 28px;
     margin: auto 0 0;
+    cursor: pointer;
 }
 /* 店舗情報カード(indexとまとめる？) */
 .favorite_flex {
