--- a/public/css/mypage_style.css
+++ b/public/css/mypage_style.css
@@ -25,6 +25,7 @@ h2 {
 .favorite_info {
     min-width: 600px;
 }
+/* 予約情報カード */
 .reservation_card {
     width: 340px;
     height: 190px;
@@ -41,7 +42,8 @@ h2 {
     justify-content: space-between;
 }
 .reservation_flex p {
-    margin-right: 100px;
+    margin-left: 30px;
+    margin-right: 80px;
 }
 .reservation_table {
     margin-top: 20px;
@@ -57,6 +59,13 @@ h2 {
     height: 28px;
     margin: auto 0 0;
     cursor: pointer;
+}
+.change_button {
+    background-color: white;
+    border-radius: 5px;
+    padding: 0px 12px;
+    font-size: 14px;
+    margin: auto 0 0;
 }
 /* 店舗情報カード(indexとまとめる？) */
 .favorite_flex {
