--- a/public/css/evaluation_style.css
+++ b/public/css/evaluation_style.css
@@ -10,18 +10,18 @@ header {
     width: 100%;
 }
 main,
-.reservation_wrap {
+.evaluation_wrap {
     position: relative;
     width: 85%;
     line-height: 1.4em;
 }
-.reservation_wrap {
+.evaluation_wrap {
     margin-top: 40px;
     color: white;
     border-radius: 10px;
     background: rgb(53, 96, 246);
 }
-.reservation_wrap h1 {
+.evaluation_wrap h1 {
     font-size: 22px;
     margin: 0 0 20px 10px;
 }
@@ -42,38 +42,27 @@ main,
 main p {
     font-size: 14px;
 }
-.reservation_confirm {
-    background: rgb(85, 128, 247);
-    padding: 20px;
-    width: 80%;
-    margin: 20px auto;
-    text-align: left;
-    font-size: 14px;
-    border-radius: 5px;
+#grade {
+  -webkit-appearance: none; /* 🚩これ無しだとスタイルがほぼ全く反映されないので注意 */
+  appearance: none;
+  cursor: pointer; /* カーソルを分かりやすく */
+  outline: none; /* スライダーのアウトラインは見た目がキツイので消す */
+  height: 1px; /* バーの高さ */
+  width: 80%; /* バーの幅 */
+  background: #8acdff; /* バーの背景色 */
+  border-radius: 10px; /* バーの両端の丸み */
+  border: solid 3px #dff1ff; /* バー周囲の線 */
+  display: block;
+  margin: 0 auto 30px;
 }
-.table_reservation {
-    line-height: 2em;
-}
-.table_reservation th {
-    font-weight: normal;
-    width: 100px;
-}
-#date,
-#time,
-#number {
-    height: 25px;
-    padding-left: 5px;
-    margin: 7px;
+#comment {
+    resize: none;
     border: none;
     border-radius: 5px;
-}
-#date {
-    width: 30%;
-    min-width: 150px;
-}
-#time,
-#number {
-    width: 90%;
+    width: 80%;
+    display: block;
+    margin: 10px auto;
+    padding: 10px;
 }
 .submit {
     position: absolute;
@@ -118,41 +107,6 @@ main p {
 }
 .info_title {
     margin: 40px 0 20px;
-}
-.reservation_content {
-    padding: 40px 20px;
-}
-
-/* 評価情報 */
-.evaluation_wrap {
-    width: 80%;
-    min-width: 900px;
-    margin: 50px auto 0;
-    justify-content: space-between;
-    color: white;
-    line-height: 1.4em;
-}
-.evaluation_flex {
-    display: flex;
-}
-.evaluation_grade {
-    width: 40%;
-    height: fit-content;
-    background: rgb(53, 96, 246);
-    padding: 40px;
-    border-radius: 10px;
-    margin-right: 30px;
-}
-.evaluation_comment {
-    background: rgb(53, 96, 246);
-    padding: 40px 60px;
-    border-radius: 10px;
-}
-.comment_content {
-    background: rgb(85, 128, 247);
-    padding: 20px 40px;
-    margin: 20px 0;
-    border-radius: 5px;
 }
 
 /* レスポンシブ対応(break point:768px) */
