評価機能修正

--- a/public/css/detail_style.css
+++ b/public/css/detail_style.css
@@ -155,6 +155,11 @@ main p {
     margin: 20px 0;
     border-radius: 5px;
 }
+.grade_rate {
+    width: 100px;
+    height: 14px;
+    background: linear-gradient(to right,red 50%,green 50%);
+}
 
 /* レスポンシブ対応(break point:768px) */
 @media screen and (max-width: 768px) {
