--- a/public/css/evaluation_style.css
+++ b/public/css/evaluation_style.css
@@ -13,6 +13,7 @@ main,
 .evaluation_wrap {
     position: relative;
     width: 85%;
+    max-width: 85%;
     line-height: 1.4em;
 }
 .evaluation_wrap {
@@ -42,18 +43,48 @@ main,
 main p {
     font-size: 14px;
 }
+.range_wrap {
+    width: 80%;
+    margin: 30px auto;
+}
+.range_scale {
+    display: flex;
+    justify-content: space-between;
+    font-size: 13px;
+}
 #grade {
-  -webkit-appearance: none; /* 🚩これ無しだとスタイルがほぼ全く反映されないので注意 */
-  appearance: none;
-  cursor: pointer; /* カーソルを分かりやすく */
-  outline: none; /* スライダーのアウトラインは見た目がキツイので消す */
-  height: 1px; /* バーの高さ */
-  width: 80%; /* バーの幅 */
-  background: #8acdff; /* バーの背景色 */
-  border-radius: 10px; /* バーの両端の丸み */
-  border: solid 3px #dff1ff; /* バー周囲の線 */
-  display: block;
-  margin: 30px auto;
+    -webkit-appearance: none; /* 🚩これ無しだとスタイルがほぼ全く反映されないので注意 */
+    appearance: none;
+    cursor: pointer; /* カーソルを分かりやすく */
+    outline: none; /* スライダーのアウトラインは見た目がキツイので消す */
+    height: 1px; /* バーの高さ */
+    width: 100%; /* バーの幅 */
+    background: #8acdff; /* バーの背景色 */
+    border-radius: 10px; /* バーの両端の丸み */
+    border: solid 3px #dff1ff; /* バー周囲の線 */
+    display: block;
+}
+/* WebKit向けのつまみ */
+#grade::-webkit-slider-thumb {
+    -webkit-appearance: none; /*  🚩デフォルトのつまみのスタイルを解除 */
+    background: #fff45d; /* 背景色 */
+    width: 20px; /* 幅 */
+    height: 20px; /* 高さ */
+    border-radius: 50%; /* 円形に */
+    box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.15); /* 影 */
+}
+/* Moz向けのつまみ */
+#grade::-moz-range-thumb {
+    background: #fff45d; /* 背景色 */
+    width: 20px; /* 幅 */
+    height: 20px; /* 高さ */
+    border-radius: 50%; /* 円形に */
+    box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.15); /* 影 */
+    border: none; /* デフォルトの線を消す */
+}
+/* Firefoxで点線が周りに表示されてしまう問題の解消 */
+#grade::-moz-focus-outer {
+    border: 0;
 }
 #comment {
     resize: none;
@@ -135,10 +166,10 @@ th,td {
     main {
         margin: auto;
     }
-    .reservation_wrap {
+    .evaluation_wrap {
         margin: 20px auto;
     }
-    .reservation_confirm {
+    .evaluation_confirm {
         margin: 10px auto 30px;
     }
     .submit p {
