--- a/public/css/mypage_style.css
+++ b/public/css/mypage_style.css
@@ -12,6 +12,17 @@ h2 {
     font-size: 28px;
     margin-bottom: 40px;
 }
+.button_update {
+    width: 150px;
+    height: 30px;
+    background: rgb(53, 96, 246);
+    border-radius: 5px;
+    color: white;
+    text-align: center;
+    font-size: 12px;
+    line-height: 30px;
+    margin-left: 30px;
+}
 .mypage_content {
     display: flex;
     justify-content: space-around;
