--- a/public/css/admin_style.css
+++ b/public/css/admin_style.css
@@ -62,6 +62,7 @@ input {
     height: 30px;
     border-radius: 5px;
     background: rgb(53, 96, 246);
+    /* background: rgb(69, 246, 53); */
     color: white;
     line-height: 30px;
     margin: 10px 0;
