--- a/public/css/admin_style.css
+++ b/public/css/admin_style.css
@@ -18,7 +18,7 @@ main {
 .sidebar_button {
     width: 250px;
     height: 120px;
-    /* background: rgb(115, 125, 153); */
+    background: rgb(53, 96, 246);
     border-radius: 10px;
     margin: 20px auto;
     font-size: 20px;
@@ -32,6 +32,10 @@ main {
 .sidebar_button-content {
     text-align: center;
     padding: 30px;
+    color: white;
+}
+.button_push {
+    background: rgb(41, 57, 100);
 }
 /* メイン画面 */
 .content_wrap {
@@ -116,6 +120,27 @@ input {
 .active {
     color: white;
     background: rgb(53, 96, 246);
+}
+
+/* 飲食店情報 */
+.shop_info-flex {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    margin: 40px auto;
+}
+.shop_image,
+.shop_info {
+    width: 500px;
+}
+.shop_info th,
+.shop_info td {
+    border-collapse: collapse;
+    border: 1px solid black;
+    padding: 10px;
+}
+.shop_info th {
+    width: 100px;
 }
 
 /* レスポンシブ対応(break point:768px) */
