--- a/public/css/admin_style.css
+++ b/public/css/admin_style.css
@@ -41,11 +41,17 @@ main {
 .content_wrap {
     min-width: 1000px;
     padding-left: 150px;
+    margin-top: 100px;
+}
+.content_title {
+    font-size: 20px;
+    text-align: center;
+    margin-bottom: 10px;
 }
 
 /* 検索フォーム */
 .search_wrap {
-    height: 200px;
+    padding: 10px 0;
     border-bottom: 1px solid #000;
 }
 .search_content {
@@ -58,6 +64,7 @@ input,select {
     height: 30px;
     border-radius: 5px;
     padding-left: 10px;
+    margin: 5px;
 }
 .button_search {
     cursor: pointer;
@@ -66,7 +73,6 @@ input,select {
     height: 30px;
     border-radius: 5px;
     background: rgb(53, 96, 246);
-    /* background: rgb(40, 89, 112); */
     color: white;
     line-height: 30px;
     margin: 10px 0;
@@ -125,9 +131,9 @@ input,select {
 /* 飲食店情報 */
 .shop_info-flex {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     width: 90%;
-    margin: 40px auto;
+    margin: 20px auto 0;
 }
 .shop_image,
 .shop_info {
@@ -136,11 +142,17 @@ input,select {
 .shop_info th,
 .shop_info td {
     border-collapse: collapse;
-    border: 1px solid black;
+    border: 1px solid rgb(0, 17, 80);
     padding: 10px;
 }
 .shop_info th {
+    color: white;
     width: 100px;
+    background: rgb(53, 96, 246);
+}
+.shop_info td {
+    color: black;
+    background: rgb(238, 238, 238);
 }
 
 /* レスポンシブ対応(break point:768px) */
