--- a/public/css/index_style.css
+++ b/public/css/index_style.css
@@ -124,6 +124,7 @@ select {
         width: 90%;
         min-width: 320px;
         justify-content: center;
+        margin-bottom: 100px;
     }
     .card_wrap {
         width: 150px;
